<resources>
    <string name="app_name">AndroidAssignmentWeatherApp</string>
    <string name="txt_login">Login</string>
    <string name="txt_signup">Not registered yet? \n<b>Sign up</b></string>
    <string name="txt_title_signup">Sign up</string>
    <string name="txt_member_login">Already a member?\n<b>Login instead</b></string>
    <string name="hint_email">*Enter email id (example@test.com)</string>
    <string name="hint_pwd">*Enter your password</string>
    <string name="hint_username">*Enter username (John Doe)</string>
    <string name="hint_confirm_pwd">*Confirm password</string>
    <string name="txt_register">Register</string>
    <string name="err_check_input">Please check your input..</string>
    <string name="err_check_email">Please enter valid email id..</string>
    <string name="err_check_password">Password cannot be blank..</string>
    <string name="err_password_len">Password must be more than 5 characters..</string>
    <string name="err_check_username">Username cannot be blank..</string>
    <string name="err_password_match">Password and confirm password not matching..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_login_failed">Failed to login, have you signed up?</string>
    <string name="login_success">Login Successful!</string>
    <string name="txt_weather_title">Weather today</string>
    <string name="txt_dummy_city">Pune</string>
    <string name="txt_dummy_country">India</string>
    <string name="sym_degree">\u2103 </string>
    <string name="txt_current_weather">Current Weather </string>
    <string name="txt_prev_weather_list">Previous Weathers </string>
    <string name="txt_curr_temp">Current Temperature: </string>
    <string name="txt_temp">Temperature: </string>
    <string name="txt_sunrise_time">Sunrise Time: </string>
    <string name="txt_sunset_time">Sunset Time: </string>
    <string name="txt_loading">Loading please wait...</string>
    <string name="txt_time">Time: </string>
    <string name="err_location_perms_needed">Need location permissions to display weather!</string>
    <string name="err_need_location_service">Cannot access location on this device,\nplease check device settings!</string>
</resources>